--- a/explore.html
+++ b/explore.html
@@ -1,171 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="explore1.css">
-    <link rel = "stylesheet" href="logo.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lora&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <title>My Library-Explore</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Explore Books - Preview</title>
+<style>
+    body {
+        margin: 0;
+        font-family: 'Nunito', sans-serif;
+        background: #f9f9f9;
+    }
+    .logo {
+        font-size: 32px;
+        padding: 20px;
+        font-weight: bold;
+        font-family: 'Cinzel Decorative', serif;
+        text-align: center;
+    }
+    .title {
+        text-align: center;
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+    .genre-filter {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .genre-btn {
+        padding: 10px 18px;
+        margin: 5px;
+        border: none;
+        background: #333;
+        color: white;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+    }
+    .genre-btn:hover {
+        background: #555;
+    }
+    .explore-section {
+        display: flex;
+        justify-content: center;
+    }
+    .books-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 20px;
+        padding: 20px;
+        max-width: 1100px;
+    }
+    .book-card {
+        background: white;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        text-align: center;
+    }
+    .book-card img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        border-radius: 8px;
+    }
+    .book-title {
+        font-size: 18px;
+        margin: 10px 0 5px;
+    }
+    .book-author {
+        font-size: 14px;
+        color: #555;
+        margin-bottom: 10px;
+    }
+    .btn {
+        display: inline-block;
+        padding: 8px 15px;
+        background: #222;
+        color: #fff;
+        border-radius: 5px;
+        text-decoration: none;
+        font-size: 14px;
+    }
+</style>
 </head>
 <body>
 
-    <div class ="logo">Brewed Woods</div>
-    <h2 class="title"> Explore Books </h2>
+<div class="logo">Brewed Woods</div>
+<h2 class="title">Explore Books by Genre</h2>
 
+<div class="genre-filter">
+    <button class="genre-btn" data-genre="all">All</button>
+    <button class="genre-btn" data-genre="thriller">Thriller</button>
+    <button class="genre-btn" data-genre="romance">Romance</button>
+    <button class="genre-btn" data-genre="selfhelp">Self Help</button>
+    <button class="genre-btn" data-genre="fiction">Fiction</button>
+</div>
 
 <section class="explore-section">
-   
-
     <div class="books-container">
 
-        <div class="book-card">
-            <img src="Silent_patient.jpg" alt="The Silent Patient">
+        <div class="book-card" data-genre="thriller">
+            <img src="Silent_patient.jpg">
             <h3 class="book-title">The Silent Patient</h3>
             <p class="book-author">Alex Michaelides</p>
-            <a href="Silent_patient.pdf" class="btn">Download</a>
         </div>
 
-        <div class="book-card">
-            <img src="atomic_habits.jpg" alt="Book Title">
+        <div class="book-card" data-genre="selfhelp">
+            <img src="atomic_habits.jpg">
             <h3 class="book-title">Atomic Habits</h3>
             <p class="book-author">James Clear</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
         </div>
 
-        <div class="book-card">
-            <img src="it_ends_with_us.jpg" alt="Book Title">
+        <div class="book-card" data-genre="romance">
+            <img src="it_ends_with_us.jpg">
             <h3 class="book-title">It Ends With Us</h3>
             <p class="book-author">Colleen Hoover</p>
-            <a href="It_Ends_With_Us.pdf" class="btn">Download</a>
         </div>
 
-         <div class="book-card">
-            <img src="focus_on_what_matters_book.jpg" alt="Book Title">
-            <h3 class="book-title">Focus On What Matters</h3>
-            <p class="book-author">Darius Forux</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-         <div class="book-card">
-            <img src="verity2.jpg" alt="Book Title">
-            <h3 class="book-title">Verity</h3>
-            <p class="book-author">Coollen Hover</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-
-
-         <div class="book-card">
-            <img src="the_girl_on_the_train" alt="Book Title">
-            <h3 class="book-title">The Girl On The Train</h3>
-            <p class="book-author">Paulo Hawkins</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-
-
-
-         <div class="book-card">
-            <img src="one_arranged_murder.jpg" alt="Book Title">
-            <h3 class="book-title">One Arranged Murder</h3>
-            <p class="book-author">Chethan Bhagath</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-
-
-
-         <div class="book-card">
-            <img src="the_alchemist.jpg" alt="Book Title">
+        <div class="book-card" data-genre="fiction">
+            <img src="the_alchemist.jpg">
             <h3 class="book-title">The Alchemist</h3>
             <p class="book-author">Paulo Coelho</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
         </div>
-
-
-         <div class="book-card">
-            <img src="i_dont_love_u_anymore.jpg" alt="Book Title">
-            <h3 class="book-title">I Don't Love You AnyMore</h3>
-            <p class="book-author">Rithwik Singh</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-         <div class="book-card">
-            <img src="a_little_life.jpg" alt="Book Title">
-            <h3 class="book-title">A Little Life</h3>
-            <p class="book-author">Hanya Yanagihara </p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-
-         <div class="book-card">
-            <img src="the_psychology_of_money.jpg" alt="Book Title">
-            <h3 class="book-title">The Psychological Of Money</h3>
-            <p class="book-author">Morgan Housel</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-         <div class="book-card">
-            <img src="the_girl_in_room_105.jpg" alt="Book Title">
-            <h3 class="book-title">The Girl In The Room 105</h3>
-            <p class="book-author">Chethan Bhagath</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-         <div class="book-card">
-            <img src="the_housemaid.jpg" alt="Book Title">
-            <h3 class="book-title">The HouseMaid</h3>
-            <p class="book-author">MC Faden</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-
-         <div class="book-card">
-            <img src="never_lie.jpg" alt="Book Title">
-            <h3 class="book-title">Never Lie</h3>
-            <p class="book-author">MC Faden</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div> <div class="book-card">
-            <img src="kite_runner.jpg" alt="Book Title">
-            <h3 class="book-title">The Kite Runner</h3>
-            <p class="book-author">Khaled Hosseini</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div> <div class="book-card">
-            <img src="gone_girl.jpg" alt="Book Title">
-            <h3 class="book-title">Gone Girl</h3>
-            <p class="book-author">Gilliyan Flyn</p>
-            <a href="Atomic_habits.pdf" class="btn">Download</a>
-        </div>
-        <!-- Add more book cards here -->
 
     </div>
 </section>
 
+<script>
+    const buttons = document.querySelectorAll('.genre-btn');
+    const cards = document.querySelectorAll('.book-card');
+
+    buttons.forEach(btn => {
+        btn.addEventListener('click', () => {
+            const genre = btn.getAttribute('data-genre');
+            cards.forEach(card => {
+                card.style.display = (genre === 'all' || card.dataset.genre === genre) ? 'block' : 'none';
+            });
+        });
+    });
+</script>
 
 </body>
 </html>
